---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for ui
info:
  program: eightc
  args:
    - tests/ui/type/type_construct_missing_field.test
input_file: compiler/eight-tests/tests/ui/type/type_construct_missing_field.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::missing_field

  × the field p is missing in construction of Box
   ╭─[tests/ui/type/type_construct_missing_field.test:2:3]
 1 │ struct Box {
 2 │   p: *i32,
   ·   ────┬───
   ·       ╰── field p defined here
 3 │ }
   ╰────
   ╭─[tests/ui/type/type_construct_missing_field.test:6:11]
 5 │ fn box_new(p: *i32) -> Box {
 6 │   let b = new Box {};
   ·           ─────┬────
   ·                ╰── construction does not name field p
 7 │ }
   ╰────
